--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.3",
+    "http-status-codes": "^2.3.0",
     "ts-node-dev": "^2.0.0"
   }
 }
