--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "prisma": "^5.11.0",
     "typescript": "^5.4.2"
   },
@@ -21,8 +22,10 @@
     "@prisma/client": "^5.11.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
     "ts-node-dev": "^2.0.0",
     "zod": "^3.22.4"
   }
