--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/nodemailer": "^6.4.14",
     "prisma": "^5.11.0",
     "typescript": "^5.4.2"
   },
@@ -28,6 +29,7 @@
     "express": "^4.18.3",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.13",
     "ts-node-dev": "^2.0.0",
     "zod": "^3.22.4"
   }
