--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
     "@types/nodemailer": "^6.4.14",
+    "@types/uuid": "^9.0.8",
     "prisma": "^5.12.0",
     "typescript": "^5.4.3"
   },
@@ -36,6 +37,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
     "ts-node-dev": "^2.0.0",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   }
 }
